--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
   - docker
 
 before_install:
+  - gem install bundler
   - docker build -t iceshop/docker-frontend -f Dockerfile.dev .
 
 script:
